@@ -1,3 +1,6 @@
+[B]Version v2.0.9[/B]
+- Replaced Bluray with HD.
+
 [B]Version v2.0.8[/B]
 - Added new Turtle v1.3.2 dependency. Turtle takes care of cleaning objects.
 - Fixed movie information issue.
